--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     "@storybook/addon-actions": "^6.4.15",
     "@storybook/addon-essentials": "^6.4.15",
     "@storybook/addon-links": "^6.4.15",
+    "@storybook/addon-storyshots": "^6.4.16",
     "@storybook/builder-webpack5": "^6.4.15",
     "@storybook/manager-webpack5": "^6.4.15",
     "@storybook/node-logger": "^6.4.15",
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "^6.4.15",
+    "react-test-renderer": "^17.0.2",
     "webpack": "^5.67.0"
   }
 }
